[fix] fixes text overflow on searchResultsView button

--- a/client/styles/scss/pages/searchResults.scss
+++ b/client/styles/scss/pages/searchResults.scss
@@ -35,8 +35,8 @@
 
   .results {
     width:100%;
-    height:455px;
-    min-width:450px;
+    height:435px;
+    min-width:430px;
     text-align:left;
     overflow-y: scroll;
     overflow:scroll;
@@ -57,6 +57,8 @@
     background-color:transparent;
     color:$primary-color;
     word-wrap: break-word;
+    white-space: normal;
+    height:65px;
   }
 }
 
@@ -64,13 +66,15 @@
     border-top: none;
   }
 
-.shop {  
+.shop {
   ul {
     clear:left;
+    width:80%;
+    min-width:300px;
     display: inline-block;
     border-top:1px solid #c9cec9;
   }
-  
+
   .shop-icon {
     display: inline-block;
     float:left;
@@ -88,7 +92,6 @@
   .shopList {
     height:auto;
   }
-
   .shopList .shop-icon {
     display:none;
   }
